apps/base/zeroclaw/resources/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: zeroclaw
    app.kubernetes.io/instance: zeroclaw
    app.kubernetes.io/name: zeroclaw
  name: zeroclaw
  namespace: zeroclaw
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app.kubernetes.io/component: zeroclaw
      app.kubernetes.io/instance: zeroclaw
      app.kubernetes.io/name: zeroclaw
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: zeroclaw
      labels:
        app.kubernetes.io/component: zeroclaw
        app.kubernetes.io/instance: zeroclaw
        app.kubernetes.io/name: zeroclaw
    spec:
      containers:
        - env:
            - name: ZEROCLAW_ALLOW_PUBLIC_BIND
              value: !!str 1
          image: ghcr.io/zeroclaw-labs/zeroclaw:v0.7.3
          imagePullPolicy: IfNotPresent
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /alive
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          name: zeroclaw
          ports:
            - containerPort: 42617
              name: http
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /alive
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          # resources:
          #   requests:
          #     cpu: 1m
          #     memory: 8Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          volumeMounts:
            - mountPath: /zeroclaw-data
              name: data
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: zeroclaw
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: zeroclaw-data
