apps/base/zeroclaw/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: zeroclaw
    app.kubernetes.io/instance: zeroclaw
    app.kubernetes.io/name: zeroclaw
  name: zeroclaw
  namespace: zeroclaw
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/component: zeroclaw
    app.kubernetes.io/instance: zeroclaw
    app.kubernetes.io/name: zeroclaw
  type: ClusterIP
