apps/base/zeroclaw/resources/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: zeroclaw
    app.kubernetes.io/name: zeroclaw
  name: zeroclaw
  namespace: zeroclaw
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
  podSelector:
    matchLabels:
      app.kubernetes.io/name: zeroclaw
  policyTypes:
    - Ingress
